--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
-    "start": "node index.js",
-    "build": "npm i"
+    "start": "nodemon index.js",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
