--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
